# glslint

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: release.yml
editors/vscode/: .vscodeignore  LICENSE.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: glsl.tmLanguage.json
src/: assemble.rs  check.rs  config.rs  deck.rs  derive.rs  diagnostics.rs  drift.rs  lints.rs  lsp.rs  main.rs  symbols.rs
