[package]
name = "glslint"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A luma.gl/deck.gl-aware GLSL checker and language server"
repository = "https://github.com/johncarmack1984/glslint"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-lsp = "0.20.0"
